--- a/Statuts.tex
+++ b/Statuts.tex
@@ -20,7 +20,7 @@
 Il est fondé entre les adhérents aux présents statuts une association régie par la loi du 1er juillet 1901 et le décret du 16 août 1901, ayant pour titre : Rézoléo (ci-après \og l'association\fg).
 
 	\section{Objet et moyens d'action}
-	L’association a pour missions :
+	L'association a pour missions :
 	\begin{itemize}
 		\item[\textbullet] la gestion, l'adaptation des réseaux de la résidence Léonard de Vinci située Avenue Paul Langevin à Villeneuve d'Ascq ;
 		\item[\textbullet]la promotion des projets et activités informatiques réalisés par ses membres auprès de Centrale Lille Institut et du grand public ;
@@ -34,25 +34,25 @@ Il est fondé entre les adhérents aux présents statuts une association régie 
 	\noindent ÉCOLE CENTRALE DE LILLE\\
 	Avenue Paul Langevin\\
 	Cité Scientifique\\
-	59651 VILLENEUVE D’ASCQ.\\
+	59651 VILLENEUVE D'ASCQ.\\
 	\\
 	Il pourra être transféré par simple décision du Bureau.
 
 	\section{Durée}
-	La durée de l’association est illimitée.
+	La durée de l'association est illimitée.
 
 	\article{Composition de l'association}
 
 	\section{Adhérents connectés}
-	Tout résident de la Résidence Léonard de Vinci peut devenir membre connecté, et ainsi bénéficier de l’ensemble des services fournis par l’association. Il doit pour cela s’acquitter d’une cotisation dont le montant est défini dans le Règlement Intérieur, et signer un contrat. La qualité d’adhérent connecté se perd suite à un défaut de paiement ou selon les modalités prévues par l'Article 8. La durée d’adhésion est choisie par l’adhérent selon les offres proposées par l’association et peut être reconduite. L'adhérent connecté dispose d'une voix délibérative en Assemblée Générale.
+	Tout résident de la Résidence Léonard de Vinci peut devenir membre connecté, et ainsi bénéficier de l'ensemble des services fournis par l'association. Il doit pour cela s'acquitter d'une cotisation dont le montant est défini dans le Règlement Intérieur, et signer un contrat. La qualité d'adhérent connecté se perd suite à un défaut de paiement ou selon les modalités prévues par l'Article 8. La durée d'adhésion est choisie par l'adhérent selon les offres proposées par l'association et peut être reconduite. L'adhérent connecté dispose d'une voix délibérative en Assemblée Générale.
 
 	\section{Adhérents non connectés}
-	Tout élève de l’École Centrale de Lille, de L’Institut Technologique Européen d'Entrepreneuriat et de Management (ITEEM) ou de l'École Nationale Supérieure de Chimie de Lille (ENSCL) peut devenir membre non connecté de l’association. Il peut bénéficier de l’ensemble des services de l’association à l’exception du droit d’accès à Internet. La qualité d’adhérent non connecté se perd par décision unanime du Bureau ou selon les modalités prévues par l'Article 8. La durée d’adhésion est de 1 an et 1 jour à compter de la date à laquelle elle est validée.
+	Tout élève de l'École Centrale de Lille, de L'Institut Technologique Européen d'Entrepreneuriat et de Management (ITEEM) ou de l'École Nationale Supérieure de Chimie de Lille (ENSCL) peut devenir membre non connecté de l'association. Il peut bénéficier de l'ensemble des services de l'association à l'exception du droit d'accès à Internet. La qualité d'adhérent non connecté se perd par décision unanime du Bureau ou selon les modalités prévues par l'Article 8. La durée d'adhésion est de 1 an et 1 jour à compter de la date à laquelle elle est validée.
 	% Toute personne peut demander, les élèves le sont automatiquement, les autres sur décision du bureau (pour les anciens et autres cas à la con)
 	% question con : pourquoi un an et un jour ?
 
 	\section{Adhérents d'honneur}
-	Tout personne qui a été adhérente et dont l’adhésion a pris fin normalement peut se voir attribuer sur décision unanime du Bureau le statut d’adhérent d’honneur. Elle peut bénéficier des services de l’association à l’exception du droit d’accès à Internet et ne dispose que d'une voix consultative en Assemblée Générale.
+	Tout personne qui a été adhérente et dont l'adhésion a pris fin normalement peut se voir attribuer sur décision unanime du Bureau le statut d'adhérent d'honneur. Elle peut bénéficier des services de l'association à l'exception du droit d'accès à Internet et ne dispose que d'une voix consultative en Assemblée Générale.
 
 	\section{Radiation}
 	La qualité de membre se perd par :
@@ -64,22 +64,22 @@ Il est fondé entre les adhérents aux présents statuts une association régie 
 		\item[\textbullet] Le non respect du Règlement Intérieur tel que défini à l'Article 9.
 	\end{enumerate}
 
-	\article{Direction de l’association}
+	\article{Direction de l'association}
 
 	\section{Règlement intérieur}
-	L'association Rézoléo se dote d’un Règlement Intérieur, définissant la cotisation, les modalités d'élections au sein de l'association et décrivant les engagements des adhérents envers l’association. Le non-respect du Règlement Intérieur pourra entraîner des sanctions allant jusqu’à l’exclusion définitive de l’association.
+	L'association Rézoléo se dote d'un Règlement Intérieur, définissant la cotisation, les modalités d'élections au sein de l'association et décrivant les engagements des adhérents envers l'association. Le non-respect du Règlement Intérieur pourra entraîner des sanctions allant jusqu'à l'exclusion définitive de l'association.
 	% «modalités d'élections au sein de l'association» ? y'a justement l'article 13 pour ça, et sinon pourquoi dans le RI ?
 
 	\section{Assemblée Générale}
-	L’Assemblée Générale est constituée de l’ensemble des adhérents à jour de cotisation, qui disposent chacun d’un droit de vote. L’Assemblée Générale est souveraine dans toutes ses décisions.
+	L'Assemblée Générale est constituée de l'ensemble des adhérents à jour de cotisation, qui disposent chacun d'un droit de vote. L'Assemblée Générale est souveraine dans toutes ses décisions.
 
 	\section{Assemblée Générale Ordinaire}
-	L'Assemblée Générale se réunit en Assemblée Générale Ordinaire une fois par an. Les convocations et l’ordre du jour sont transmis par le Secrétaire à tous les membres de l’association au moins une semaine en avance. Tous les membres de l'Assemblée Générale disposent d’une voix. Les sujets de vote doivent explicitement être annoncés dans l’ordre du jour préparé par le Président de l'association, à partir des points qui lui auront étés proposés par les membres de l'association. En cas d’égalité de voix, celle du Président est prépondérante. Il est possible de voter par procuration (par lettre ou par mail signé selon un protocole sécurisé). Le quorum est fixé à 5\% des adhérents.
+	L'Assemblée Générale se réunit en Assemblée Générale Ordinaire une fois par an. Les convocations et l'ordre du jour sont transmis par le Secrétaire à tous les membres de l'association au moins une semaine en avance. Tous les membres de l'Assemblée Générale disposent d'une voix. Les sujets de vote doivent explicitement être annoncés dans l'ordre du jour préparé par le Président de l'association, à partir des points qui lui auront étés proposés par les membres de l'association. En cas d'égalité de voix, celle du Président est prépondérante. Il est possible de voter par procuration (par lettre ou par mail signé selon un protocole sécurisé). Le quorum est fixé à 5\% des adhérents.
 
-	Lors de l'Assemblée Générale Ordinaire, le Président sortant présente un bilan moral des activités de l’association durant l’année écoulée. Le Trésorier sortant présente le bilan financier et les comptes de l’association. En cas de démission ou de motif légitime, tout membre désigné en réunion peut effectuer ces bilans. Ces bilans sont soumis à l’approbation de l’Assemblée.
+	Lors de l'Assemblée Générale Ordinaire, le Président sortant présente un bilan moral des activités de l'association durant l'année écoulée. Le Trésorier sortant présente le bilan financier et les comptes de l'association. En cas de démission ou de motif légitime, tout membre désigné en réunion peut effectuer ces bilans. Ces bilans sont soumis à l'approbation de l'Assemblée.
 
 	\section{Assemblée Générale Extraordinaire}
-	Sur décision du Président ou à la suite d'une demande d'au moins 10\% des adhérents, l'Assemblée Générale est convoquée pour une Assemblée Générale Extraordinaire. L’Ordre du Jour est alors transmis au moins une semaine en avance à tous les membres de l’association. Chaque adhérent dispose d’un vote. En cas d'égalité, la voix du Président est prépondérante. Il est possible de voter par procuration (par lettre ou par mail signé selon un protocole sécurisé). Par défaut un quorum de 5\% est nécessaire pour la modification des statuts, pour la dissolution de l'association le quorum est fixé à 15\%. Dans le cas où le quorum ne serait pas atteint, une nouvelle Assemblée Générale peut être reconvoquée dans un délai minimal de quinze jours, sans condition de quorum.
+	Sur décision du Président ou à la suite d'une demande d'au moins 10\% des adhérents, l'Assemblée Générale est convoquée pour une Assemblée Générale Extraordinaire. L'Ordre du Jour est alors transmis au moins une semaine en avance à tous les membres de l'association. Chaque adhérent dispose d'un vote. En cas d'égalité, la voix du Président est prépondérante. Il est possible de voter par procuration (par lettre ou par mail signé selon un protocole sécurisé). Par défaut un quorum de 5\% est nécessaire pour la modification des statuts, pour la dissolution de l'association le quorum est fixé à 15\%. Dans le cas où le quorum ne serait pas atteint, une nouvelle Assemblée Générale peut être reconvoquée dans un délai minimal de quinze jours, sans condition de quorum.
 	% pourquoi pas de quorum par défaut (incohérent avec AGO) ?
 	% Beaucoup plus pour dissolution ? En supposant que la disolution ait lieu car l'asso n'a plus de membres, c'est facile de tous les avoir :-D
 
@@ -88,16 +88,16 @@ Il est fondé entre les adhérents aux présents statuts une association régie 
 
 	\begin{itemize}
 		\item[\textbullet] Président\\
-		 Le Président est le responsable moral de l’association. Il est à ce titre habilité à agir auprès des tiers au nom de l’association. Il est garant, avec le Trésorier, de la santé de l’association.\\
+		 Le Président est le responsable moral de l'association. Il est à ce titre habilité à agir auprès des tiers au nom de l'association. Il est garant, avec le Trésorier, de la santé de l'association.\\
 		Le rôle du Président pourra être précisé, dans ses modalités, dans le Règlement Intérieur.
 		% utile ? - C'est juste pour se laisser une possibilité supplémentaire - « complété » / « élargi » plutôt ? - (c'est pas le but d'un RI)
 		\item[\textbullet] Trésorier\\
-		Le Trésorier est responsable de la gestion comptable et financière de l’association, notamment du fonctionnement de ses comptes bancaires ainsi que de la saisie comptable. Il assure le recouvrement des cotisations et des ressources de toute nature de l’association. Il effectue les paiements et perçoit les recettes avec l’accord du Président.\\
+		Le Trésorier est responsable de la gestion comptable et financière de l'association, notamment du fonctionnement de ses comptes bancaires ainsi que de la saisie comptable. Il assure le recouvrement des cotisations et des ressources de toute nature de l'association. Il effectue les paiements et perçoit les recettes avec l'accord du Président.\\
 		% Accord du président pour les recettes me semble superflu -> ça me rappelle d'autres statuts (mais ça me semble quand même bête…)
 		Le rôle du Trésorier pourra être précisé, dans ses modalités, dans le Règlement Intérieur.
 
 		\item[\textbullet] Secrétaire\\
-		Le Secrétaire est responsable de la bonne tenue des réunions, ainsi que de leur compte-rendu. Il est responsable de la gestion administrative de l’association. Il est également habilité sous réserve du droit des tiers à délivrer tous les documents officiels du Rézoléo.\\
+		Le Secrétaire est responsable de la bonne tenue des réunions, ainsi que de leur compte-rendu. Il est responsable de la gestion administrative de l'association. Il est également habilité sous réserve du droit des tiers à délivrer tous les documents officiels du Rézoléo.\\
 		Le rôle du Secrétaire pourra être précisé dans le Règlement Intérieur.\\
 
 		Aucun membre du Bureau ne peut être nommé à plus d'un poste à la fois. Le Bureau est renouvelé tous les ans selon les modalités de renouvellement précisées dans le Règlement Intérieur.
@@ -107,11 +107,11 @@ Il est fondé entre les adhérents aux présents statuts une association régie 
 
 	\section{Modification des statuts}
 	Les présents statuts peuvent être modifiés sur proposition du Bureau et vote lors d'une Assemblée Générale Ordinaire.
-	Les procédures sont alors entreprises par le Secrétaire ou tout autre personne nommé en assemblé générale dans un délai d’un mois après la parution du Compte Rendu.
+	Les procédures sont alors entreprises par le Secrétaire ou tout autre personne nommé en assemblé générale dans un délai d'un mois après la parution du Compte Rendu.
 
 	\section{Dissolution}
-	L’association peut être dissoute sur proposition du Bureau et vote lors d'une Assemblée Générale Extraordinaire.
-	Le Président ou toute autre personne nommée en Assemblé Générale est alors responsable du processus de dissolution tel que décrit par le cadre légal jusqu’à son aboutissement.
+	L'association peut être dissoute sur proposition du Bureau et vote lors d'une Assemblée Générale Extraordinaire.
+	Le Président ou toute autre personne nommée en Assemblé Générale est alors responsable du processus de dissolution tel que décrit par le cadre légal jusqu'à son aboutissement.
 
 	\newpage
 
